crates/toml_edit/tests/snapshots/invalid/integer/incomplete-oct.stderr
TOML parse error at line 1, column 18
  |
1 | incomplete-oct = 0o
  |                  ^^
integer number overflowed
